# pcd_algorithm

./: .gitignore  Makefile  README.md  pyproject.toml
data/Mask3D_result/: 20231108_120945_room.txt
data/Mask3D_result/pred_mask/: 20231108_120945_room_0.txt  20231108_120945_room_1.txt  20231108_120945_room_2.txt  20231108_120945_room_3.txt  20231108_120945_room_4.txt
pcd_algorithm/: Mask3d_mask.py
pcd_algorithm/clustering/: k_means.py
pcd_algorithm/utils/: merge.py
pcd_app/api/: app.py  routes.py
