[tool.poetry]
name = "pcd-algorithm"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fire = "^0.5.0"
numpy = "^1.24.2"
open3d = "0.17.0"
scikit-learn = "^1.2.2"
pyyaml = "^6.0"
addict = "^2.4.0"
pillow = "^9.5.0"
pandas = "^2.0.0"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
fastapi = "^0.104.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
